@@ -187,6 +187,8 @@ Unreleased changes (1.0-dev)
 64. NUTCH-528 - CrawlDbReader: add some new stats + dump into a CSV format
     (Emmanuel Joke via ab)
 
+65. NUTCH-597 - NPE in Fetcher2 (Remco Verhoef via ab)
+
 
 Release 0.9 - 2007-04-02
 
